# dynamic_game_trajectory_planner

./: CMakeLists.txt  README.md  build_and_run.sh  plot_trajectories.py  result_compare.txt
include/: Data_SIMD.h  dynamic_game_planner.h  ispc_parameter.h  parameters.h  spline.h  update_trajetcory_interface.h  utils.h  vehicle_state.h
src/: dynamic_game_planner.cpp  integrate copy.ispc  integrate.ispc  main.cpp  update_trajectory.ispc  utils.cpp  vehicle_state.cpp
